# Kei-Object-Notation

./: .clang-format  .clangd  SYNTAX.md  meson.build
include/koncpp/: .defs.hh  value.hh
include/koncpp/types/: base.hh  boolean.hh  float.hh  integer.hh  object.hh  string.hh
src/: meson.build  s.cc
src/types/: boolean.cc  float.cc  meson.build
test/: _.hh  boolean.cc  float.cc  integer.cc  main.cc  meson.build  string.cc
