integer = executable(
    '__integer',
    files('integer.cc'),
    dependencies: project_dep,
)

boolean = executable(
    '__boolean',
    files('boolean.cc'),
    dependencies: project_dep
)

float = executable(
    '__float',
    files('float.cc'),
    dependencies: project_dep
)

string = executable(
    '__string',
    files('string.cc'),
    dependencies: project_dep
)

test('integer', integer)
test('boolean', boolean)
test('float', float)
test('string', string)